[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/message-3d/message_3d.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/flag/flag.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/bar-3d/hp_bar_3d.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/buildings/farm/fence.png" type="Texture" id=4]
[ext_resource path="res://scene/buildings/tower/tower.png" type="Texture" id=8]
[ext_resource path="res://scene/buildings/tower/floor.png" type="Texture" id=9]
[ext_resource path="res://scene/buildings/tower/pilars.png" type="Texture" id=10]
[ext_resource path="res://scene/buildings/tower_platform/tower_platform.gd" type="Script" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.83237, 0.84971, 1.62462 )

[node name="tower_platform" type="StaticBody"]
script = ExtResource( 11 )
__meta__ = {
"_editor_description_": ""
}

[node name="pivot" type="Spatial" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )

[node name="tower_1" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.271888, 0.611875, -0.00784492 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 8 )

[node name="tower_2" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.302196, 0.611875, -0.00784492 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 8 )

[node name="tower_3" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187773, 0.611875, 0.292994 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 8 )

[node name="tower_4" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187773, 0.611875, -0.295989 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 8 )

[node name="pilar_2" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.24469, 0.184066, 0.285246 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="pilar_3" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.206993, 0.184066, 0.270263 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="pilar_4" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.206993, 0.184066, -0.271043 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="pilar_5" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.233784, 0.184066, -0.271043 )
modulate = Color( 0.509804, 0.321569, 0.0784314, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="floor" type="Sprite3D" parent="pivot"]
transform = Transform( 0.936435, 0, 0, 0, -4.02315e-08, -0.999483, 0, 0.920389, -4.36888e-08, 0.0187773, 0.685406, 0.0124703 )
alpha_cut = 2
texture = ExtResource( 9 )

[node name="pivot2" type="Spatial" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )

[node name="fence_1" type="Sprite3D" parent="pivot2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.642586, 0, 1.16101 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="fence_2" type="Sprite3D" parent="pivot2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.2508, 0, 0.563871 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="fence_3" type="Sprite3D" parent="pivot2"]
transform = Transform( -0.0110477, 0, 0.999939, 0, 1, 0, -0.999939, 0, -0.0110477, 1.25694, 0, -0.673132 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="fence_4" type="Sprite3D" parent="pivot2"]
transform = Transform( -0.999939, 0, -0.0110478, 0, 1, 0, 0.0110478, 0, -0.999939, 0.653121, 0, -1.27472 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="fence_5" type="Sprite3D" parent="pivot2"]
transform = Transform( -0.999651, 0, -0.0264212, 0, 1, 0, 0.0264212, 0, -0.999651, -0.554054, 0, -1.25367 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="fence_6" type="Sprite3D" parent="pivot2"]
transform = Transform( 0.0264213, 0, -0.999651, 0, 1, 0, 0.999651, 0, 0.0264213, -1.14629, 0, -0.640677 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="fence_7" type="Sprite3D" parent="pivot2"]
transform = Transform( 0.005428, 0, -0.999985, 0, 1, 0, 0.999985, 0, 0.005428, -1.13812, 0, 0.563281 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="fence_8" type="Sprite3D" parent="pivot2"]
transform = Transform( 0.999985, 0, 0.00542805, 0, 1, 0, -0.00542805, 0, 0.999985, -0.537684, 0, 1.16825 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 4 )

[node name="turret_pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.9, 0 )

[node name="flag" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.021, 1.95727, -1.17307 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.034, 0, 0.003 )
shape = SubResource( 1 )
disabled = true

[node name="hpBar" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.542833, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.6, 0 )

[node name="message_3d" parent="." instance=ExtResource( 1 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = 10.0
unit_size = 10.0
bus = "sfx"

[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
